fix file dir to right for rename

--- a/dockerfile-replica
+++ b/dockerfile-replica
@@ -2,8 +2,8 @@ FROM redis
 
 WORKDIR /etc/redis
 
-COPY ./replica/redis.conf .
-COPY ./replica/script.sh .
-COPY ./replica/sentinel.conf .
-COPY ./replica/sentinel-users.acl .
+COPY ./replica-sentinel/redis.conf .
+COPY ./replica-sentinel/script.sh .
+COPY ./replica-sentinel/sentinel.conf .
+COPY ./replica-sentinel/sentinel-users.acl .
 COPY ./users.acl .
